modif rapide et refactorisation de certaines petites parties

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                 - héberger ses propres tuiles
         -->
         <!-- <button id="btn-screenshot" class="btn btn-light">📸</button> -->
+        <button class="btn btn-light" id="btn-test">TEST</button>
+        <button class="btn btn-light" id="btn-test1">TEST</button>
     </div>
 
     <div id="toast">Coordonnées copiées dans le presse-papier</div>
@@ -39,7 +41,6 @@
         <li class="list-group-item" id="cst_ctxmn_start_point">🔴 Définir le point de départ</li>
         <li class="list-group-item" id="cst_ctxmn_end_point">🟢 Définir le point d'arrivée</li>
         <li class="list-group-item" id="cst_ctxmn_add_marker">📍 Placer un marqueur</li>
-        <li class="list-group-item" id="cst_ctxmn_save_img">📸 Enregistrer l'image</li>
     </ul>
 
 
